Redundant -XX:-ZGenerational analysis.