@@ -2840,4 +2840,16 @@ public class TestAnalysis {
                 Analysis.INFO_Z_UNCOMMIT_DISABLED + " analysis not identified.");
     }
 
+    @Test
+    void testZGenerationalDisabledRedundant() {
+        String opts = "-Xss1g -XX:+UseZGC -XX:-ZGenerational -Xmx10g";
+        JvmContext context = new JvmContext(opts);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_Z_GENERATIONAL_DISABLED_REDUNDANT.getKey()),
+                Analysis.INFO_Z_GENERATIONAL_DISABLED_REDUNDANT + " analysis not identified.");
+        assertNull(jvmOptions.getUnaccountedDisabledOptions(),
+                "-XX:-ZGenerational incorrectly identified as an unaccounted disabled option.");
+    }
+
 }
